--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "4lphab0t-Md",
+  "name": "RISKY-Md",
   "version": "13.0.0",
-  "description": "4lpha B0t Multi Device, Only update in YouTube ZEEONE OFC",
+  "description": "IKY B0t Multi Device, Only update in YouTube XRYMODSYT",
   "main": "zeeone.js",
   "license": "MIT",
   "scripts": {
@@ -14,7 +14,7 @@
     "base",
     "baileys-md"
   ],
-  "author": "ZeeoneOfc",
+  "author": "RISKY BOT",
   "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "github:adiwajshing/baileys",
